# QAD-DAshboard

./: .env.example  .gitignore  .prettierignore  package-lock.json  package.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260523213000_report_schema.py  20260525210000_report_workflow_states.py  20260526190000_operational_semantic_facts.py  20260529120000_operational_query_indexes.py
backend/app/: main.py
backend/app/admin/: schemas.py  service.py
backend/app/api/: admin.py  auth.py  lookups.py  reports.py  router.py
backend/app/auth/: constants.py  dependencies.py  models.py  schemas.py  service.py
backend/app/core/: config.py  logging_config.py  middleware.py  supabase.py
backend/app/db/: session.py
backend/app/reporting/: __init__.py  models.py  repository.py  schemas.py  service.py  workbook_diagnostics.py  workbook_export.py  workbook_normalization.py  workbook_ownership.py  workbook_parser.py  workbook_semantics.py  workbook_service.py  workbook_sync.py
backend/app/scripts/: seed.py
backend/tests/: test_workbook_normalization.py  test_workbook_ownership.py  workbook_factory.py
frontend/: .env.example  eslint.config.mjs  package.json  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/ui/: button.tsx  (+1 more)
frontend/src/hooks/: use-sidebar-store.ts
frontend/src/lib/: query-client.ts
supabase/migrations/: 20260523093000_auth_system.sql  20260523113000_admin_management.sql
(+63 files in other folders)
