[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-qad-backend"
version = "0.1.0"
description = "FastAPI foundation for DBL QAD Portal."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.115.12",
  "greenlet>=3.2.2",
  "pydantic-settings>=2.9.1",
  "sqlalchemy[asyncio]>=2.0.41",
  "supabase>=2.15.1,<2.16.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.10"
]

[project.scripts]
qad-seed = "app.scripts.seed:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
